file/save crashes when target path isnt found #29537

Closed
opened 2011-12-08 06:33:18 +01:00 by mike marsh · 5 comments

%%%Blender 26.6 crashes when you try to save to a destination that is not ready. While trying to save to a removable flash drive, I clicked ok befor the flash drive was in my computer. A notice came up saying it was not ready, and then locked up. No buttons would work. "cancel" ,"retry" or "continue". only way out was to use task manager to close Blender.%%%

%%%Blender 26.6 crashes when you try to save to a destination that is not ready. While trying to save to a removable flash drive, I clicked ok befor the flash drive was in my computer. A notice came up saying it was not ready, and then locked up. No buttons would work. "cancel" ,"retry" or "continue". only way out was to use task manager to close Blender.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Developer note: crash might happen because of how uiPopupMenuSaveOver works and used in wm_save_mainfile_invoke: it's getting called from invoke function and in case file doesn't exist it executes operator rather than showing popup. operator_cb is used for this which runs WM_operator_call which (indirectly) frees operator and this leads to reading freed memory in original's wm_operator_invoke call.
Here's valgrind output: http://www.pasteall.org/27233
Easy to reproduce: save file, remove it outside of blender, hit Ctrl-S%%%

%%%Developer note: crash might happen because of how uiPopupMenuSaveOver works and used in wm_save_mainfile_invoke: it's getting called from invoke function and in case file doesn't exist it executes operator rather than showing popup. operator_cb is used for this which runs WM_operator_call which (indirectly) frees operator and this leads to reading freed memory in original's wm_operator_invoke call. Here's valgrind output: http://www.pasteall.org/27233 Easy to reproduce: save file, remove it outside of blender, hit Ctrl-S%%%

%%%Another note: Function is called uiPupMenuSaveOver, but it's not a problem Problem that some more operatosr are using WM_operator_call from invoke(). Not sure, probably WM_operator_call should be changed in a way it's not freeing operator itself. Can be done by separating wm_operator_exec in such way: http://www.pasteall.org/27234/diff
Probably better not to perform such kind of changes just before release and rethink this WM_operator_call for 2.62.%%%

%%%Another note: Function is called uiPupMenuSaveOver, but it's not a problem Problem that some more operatosr are using WM_operator_call from invoke(). Not sure, probably WM_operator_call should be changed in a way it's not freeing operator itself. Can be done by separating wm_operator_exec in such way: http://www.pasteall.org/27234/diff Probably better not to perform such kind of changes just before release and rethink this WM_operator_call for 2.62.%%%

%%%fixed 42583.%%%

%%%fixed 42583.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29537
No description provided.